@@ -3,7 +3,9 @@ Apache SIS Change Log
 
 Release 0.3-incubating - Current Development
 
-* SIS-48: added some basic junit tests for the core geometry classes in 
+* SIS-49: added some simple junit tests for the GeoHashUtils class in sis-core
+
+* SIS-48: added some simple junit tests for the core geometry classes in 
   sis-core - LatLon, LatLonRect and LatLonPointRadius (rlaidlaw)
 
 * SIS-49: updated for loop in getCircularRegionApproximation of LatLonPointRadius 
